start adding posts

--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,8 +1,16 @@
-dateModified: 1672073802
+dateModified: 1672087007
 email:
   fromEmail: liam.wohlfart@tuta.io
   fromName: craft-testing
   transportType: craft\mail\transportadapters\Sendmail
+fs:
+  posts:
+    hasUrls: true
+    name: Posts
+    settings:
+      path: '@webroot/assets/posts'
+    type: craft\fs\Local
+    url: '@web/assets/posts'
 meta:
   __names__:
     5fbd4a25-ca6f-4034-b3a8-ab54bd4c6ee8: Body # Body
@@ -10,8 +18,10 @@ meta:
     77ec8cb9-ce99-48cd-a5de-9a3f78895d02: craft-testing # craft-testing
     835bcb00-5059-482a-8e93-09d08f9b2fe5: Common # Common
     6048d56f-8aa9-433c-8656-692dbe74cfc0: Default # Default
+    8020ac1f-6ecb-4158-81bf-a173fd686fc6: Images # Images
     829911df-e853-4269-9854-0a95ee8c65c5: Posts # Posts
     a72f3aef-9c28-4bcc-98fb-578f8dccf5d7: Posts # Posts
+    cfb70364-f77d-4b8e-9c47-ddc9e5d56b90: 'Preview Image' # Preview Image
 plugins:
   redactor:
     edition: standard
