--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=dev vite",
-    "build": "NODE_ENV=production vite build",
+    "dev": "vite",
+    "build": "vite build",
     "watch-tailwind": "tailwindcss -i ./src/input.css -o ./web/main.css --watch"
   },
   "keywords": [],
