--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "glob": "^8.0.3",
+    "node-sass": "^8.0.0",
+    "sass": "^1.57.1",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.3",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-manifest-sri": "^0.1.0",
-    "vite-plugin-restart": "^0.3.0"
+    "vite-plugin-restart": "^0.3.0",
+    "vue-spinner": "^1.0.4"
+  },
+  "dependencies": {
+    "vue": "^3.2.45"
   }
 }
