--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1672087007
+dateModified: 1674401824
 email:
   fromEmail: liam.wohlfart@tuta.io
   fromName: craft-testing
@@ -13,15 +13,26 @@ fs:
     url: '@web/assets/posts'
 meta:
   __names__:
+    3c8ef1c1-add1-409c-ad8e-1b040ac2cddc: Companies # Companies
     5fbd4a25-ca6f-4034-b3a8-ab54bd4c6ee8: Body # Body
+    020a6bd6-9734-49a0-a09f-ad861ae14069: 'Postal code' # Postal code
+    37d3cc23-e2b0-4af8-82a0-f53a65412cbd: Description # Description
     39a89327-58fa-4fce-a908-dfaa299afb0b: craft-testing # craft-testing
+    43e53a08-867a-444e-b3dc-c7318c7753e5: E-Mail # E-Mail
+    65a01919-6c22-442a-bc88-fb28bea4296c: Latitude # Latitude
     77ec8cb9-ce99-48cd-a5de-9a3f78895d02: craft-testing # craft-testing
+    92b5b41c-1150-4229-82af-7a5e1a736d95: 'Street number' # Street number
+    97fc2712-4f93-4293-bc88-2f2eeb2a97ab: 'Street name' # Street name
     835bcb00-5059-482a-8e93-09d08f9b2fe5: Common # Common
+    4579a2df-4698-436d-81c2-092ce5a5c11f: Company # Company
     6048d56f-8aa9-433c-8656-692dbe74cfc0: Default # Default
     8020ac1f-6ecb-4158-81bf-a173fd686fc6: Images # Images
+    456584eb-b3da-4bf3-bb8c-ad356c703a7d: City # City
     829911df-e853-4269-9854-0a95ee8c65c5: Posts # Posts
     a72f3aef-9c28-4bcc-98fb-578f8dccf5d7: Posts # Posts
+    cd5f9edf-08f6-4fdb-aac1-10a4d5d7c96c: Longitude # Longitude
     cfb70364-f77d-4b8e-9c47-ddc9e5d56b90: 'Preview Image' # Preview Image
+    d513e07b-575f-46c8-8a2f-bba1174626fe: Default # Default
 plugins:
   redactor:
     edition: standard
