--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@vitejs/plugin-react": "^3.1.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "glob": "^8.0.3",
@@ -25,6 +27,8 @@
     "vue-spinner": "^1.0.4"
   },
   "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "vue": "^3.2.45"
   }
 }
